<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navInicio"
            android:icon="@drawable/inicio"
            android:title="@string/inicio" />
        <item
            android:id="@+id/navPerfil"
            android:icon="@drawable/perfil"
            android:title="@string/perfil" />
        <item
            android:id="@+id/navInmuebles"
            android:icon="@drawable/inmueble"
            android:title="@string/inmuebles" />
        <item
            android:id="@+id/navInquilinos"
            android:icon="@drawable/inquilino"
            android:title="@string/inquilinos" />
        <item
            android:id="@+id/navContratos"
            android:icon="@drawable/contrato"
            android:title="@string/contratos" />
        <item
            android:id="@+id/navLogout"
            android:icon="@drawable/salir"
            android:title="@string/logout" />
    </group>
</menu>